--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -1,4 +1,4 @@
-name: Build Python Wheels
+name: Build and Publish
 
 on:
   push:
@@ -14,6 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12', '3.13']
 
     steps:
     - uses: actions/checkout@v4
@@ -27,7 +28,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.11'
+        python-version: ${{ matrix.python-version }}
 
     - name: Install Rust
       uses: dtolnay/rust-toolchain@stable
@@ -36,7 +37,7 @@ jobs:
       run: pip install maturin
 
     - name: Build wheels
-      run: maturin build --release --features python --out dist --find-interpreter
+      run: maturin build --release --features python --out dist
 
     - name: Test wheel installation
       run: |
@@ -46,10 +47,10 @@ jobs:
     - name: Upload wheels as artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: wheels-${{ matrix.os }}
+        name: wheels-${{ matrix.os }}-${{ matrix.python-version }}
         path: dist/*.whl
 
-  publish:
+  publish-pypi:
     name: Publish to PyPI
     needs: build-wheels
     runs-on: ubuntu-latest
