--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "maturin"
 
 [project]
 name = "metronome-rs"
-version = "1.1.0"
+version = "1.1.1"
 description = "A metronome library with audio beep functionality"
 license = {text = "MIT OR Apache-2.0"}
 requires-python = ">=3.8"
@@ -19,6 +19,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Programming Language :: Rust",
     "Topic :: Multimedia :: Sound/Audio",
     "Topic :: Software Development :: Libraries",
